--- a/tour.html
+++ b/tour.html
@@ -25,13 +25,50 @@
                     <h1>Hello!</h1>
                     <h2>It is the first time you are using Yimello. <a href="#">Ready for a tour?</a></h2>
                 </li>
+                <li class="slide">
+                    <h1>How does it work?</h1>
+                    <h2>
+                        Yimello is a tiny tool to save your bookmarks and browse them easily.
+                        For that, each one is bound to some tags you define.
+                    </h2>
+                    <h2>In the loop? <a href="#">Here we go</a></h2>
+                </li>
+                <li class="slide">
+                    <h1>Insert your URL:</h1>
+                    <form action="#" method="post" class="url-form">
+                        <p>
+                            <input name="url" placeholder="http://" type="text" />
+                        </p>
+                        <p>
+                            <button type="button">Save it</button>
+                        </p>                        
+                    </form>
+                </li>
+                <li class="slide">
+                    <h1>Wonderful!</h1>
+                    <h2>Now bind some tags to it:</h2>
+                    <ul class="tags">
+                    </ul>
+                    <form action="#" method="post" class="tag-form">
+                        <p>
+                            <input name="tags" type="text" placeholder="Press Enter to end a tag" />
+                        </p>
+                        <p>
+                            <button type="button">I am done</button>
+                        </p>
+                    </form>
+                </li>
+                <li class="slide">
+                    <h1>Congratulations!</h1>
+                    <h2>From now on, you are ready to use Yimello :)</h2>
+                    <h2>Hope you will have fun!</h2>
+                    <p>
+                        <button type="button" id="go-button" class="red-flat-button">Go</button>
+                    </p>
+                </li>
         </div>
         <div class="slide-cursor-wrapper">
             <ul class="slide-cursors">
-                <li class="slide-cursor active-cursor">
-                </li>
-                <li class="slide-cursor">
-                </li>
             </ul>
         </div>
     </body>
