Improved main part ; Improved ARO ; Improved DAO ; Updated system lib

--- a/main.html
+++ b/main.html
@@ -74,8 +74,11 @@
                 </p>
                 <p>
                     <input type="text" name="tags" placeholder="Press Enter to end a tag" />
+                    <datalist id="js-tag-suggestions">
+                    </datalist>
                 </p>
                 <p>
+                    <button type="button" class="cancel-button">Cancel</button>
                     <button type="button" class="save-button">Save</button>
                 </p>
             </form>
