--- a/testing/output/output.html
+++ b/testing/output/output.html
@@ -2,10 +2,14 @@
 <html class="no-js">
     <head>
         <title>UnitTesting output</title>
+        <link rel="stylesheet" type="text/css" href="testing.css">
     </head>
     <body>
         <div id="outcome"></div>
 
         <script type="text/javascript" src="test_output.js"></script>
+        <script type="text/javascript">
+        	UnitTestClass.run();
+        </script>
     </body>
 </html>
