Added UTs to helpers ; Improved TourPresenter ; Added tests for ARO ; Preparing persistant feature for whole app

--- a/testing/output/output.html
+++ b/testing/output/output.html
@@ -7,6 +7,7 @@
     <body>
         <div id="outcome"></div>
 
+        <script type="text/javascript" src="libs/jquery.1.10.2.js"></script>
         <script type="text/javascript" src="test_output.js"></script>
         <script type="text/javascript">
         	UnitTestClass.run();
