--- a/app/ui/tour.html
+++ b/app/ui/tour.html
@@ -23,7 +23,10 @@
             <ul class="slides js-slide-list">
                 <li class="slide js-slide">
                     <h1>Hello!</h1>
-                    <h2>It is the first time you are using Yimello. <a href="#" class="js-hello-trigger">Ready for a tour?</a></h2>
+                    <h2>
+                        It is the first time you are using Yimello.<br />
+                        <a href="#" class="js-hello-trigger">Ready for a tour?</a>
+                    </h2>
                 </li>
                 <li class="slide js-slide">
                     <h1>How does it work?</h1>
