Fixed issues with tests

--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -55,6 +55,7 @@
             </div>
         </div>
 
+        <!-- Bookmark form -->
         <div class="bookmark-form-wrapper js-bookmark-form-wrapper">
             <form action="#" method="post">
                 <p>
