Improved main presenter ; Added more tests ; Improved model layer

--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -65,7 +65,7 @@
                     <input type="text" name="title" placeholder="An awesome title" />
                 </p>
                 <p>
-                    <textarea name="description" placeholder="Write something good about your bookmark"></textarea>
+                    <textarea name="description" placeholder="Write something useful about your bookmark"></textarea>
                 </p>
                 <p>
                     <ul class="tags js-form-tag-list">
@@ -73,8 +73,8 @@
                     </ul>
                 </p>
                 <p>
-                    <input type="text" name="tags" placeholder="Press Enter to end a tag" list="js-tag-suggestions" />
-                    <datalist id="js-tag-suggestions">
+                    <input type="text" name="tags" placeholder="Press Enter to end a tag" list="tag-suggestions" />
+                    <datalist id="tag-suggestions" class="js-tag-suggestions">
                     </datalist>
                 </p>
                 <p>
