Refactored MainPresenter ; Improved style

--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -19,11 +19,7 @@
         <script type="text/javascript" src="js/libs/require.2.1.9.js" data-main="js/boot"></script>
     </head>
     <body>
-        <div class="patchwork"></div>
-
-        <div class="intro-strap">
-           <img src="assets/img/logo.png" />
-           <h1>Yimello</h1>
-        </div>
+        <img class="intro-strap js-intro-strap" src="assets/img/intro-title.png" />
+        <img class="hexagon js-hexagon" src="assets/img/hexagon.png" />
     </body>
 </html>
