--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -38,10 +38,11 @@
 
                 <div class="tag-list">
                     <ul class="tags js-tag-list">
-                        <li>
-                            <p class="js-most-popular">Most popular</p>
-                            <img src="assets/img/edit-icon.png" />
-                            <img src="assets/img/trash-icon.png" />
+                        <li class="js-search-tab">
+                            <p>Search results</p>
+                        </li>
+                        <li class="js-most-popular">
+                            <p>Most popular</p>
                         </li>
                     </ul>
                 </div>
@@ -52,10 +53,10 @@
                 <p class="default-content js-default-content">No bookmarks to display :(</p>
             </div>
 
-            <div class="search-wrapper">
+            <div class="search-wrapper js-search-engine">
                 <img src="assets/img/search-icon.png" />
                 <form action="#" method="post">
-                    <input type="text" name="search" placeholder="Type something to search" />
+                    <input type="text" name="searchField" placeholder="Type something to search" />
                 </form>
             </div>
         </div>
