Added release system ; Fixed small issues before first release

--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js">
     <head>
-        <title></title>
+        <title>Yimello</title>
 
         <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
         <script type="text/javascript">
