Create new business obj ; Designed backup feature ; Grunt release improved

--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -111,6 +111,7 @@
                 <ul>
                     <li class="js-tour-trigger">Get a tour again</li>
                     <li class="js-import-browser">Import from web browser</li>
+                    <li class="js-import-backup">Import a backup file</li>
                     <li class="js-close-trigger">Close</li>
                 </ul>
             </div>
