--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
         <script type="text/javascript">
             var gui = require('nw.gui');
+            var FileAPI = require('fs');
             
             if (typeof(window.require) !== "undefined") {
                 window.requireNode = window.require;
