Improved error handling ; Added header ; Improved security

--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -20,7 +20,16 @@
         <script type="text/javascript" src="js/libs/require.2.1.9.js" data-main="js/boot"></script>
     </head>
     <body>
-        <img class="intro-strap js-intro-strap" src="assets/img/intro-title.png" />
-        <img class="hexagon js-hexagon" src="assets/img/hexagon.png" />
+        <header class="header">
+            <ul>
+                <li><img src="assets/img/exit.png" class="js-exit-trigger" /></li>
+                <li><img src="assets/img/minus.png" class="js-minimize-trigger" /></li>
+            </ul>
+        </header>
+        
+        <div class="body">
+            <img class="intro-strap js-intro-strap" src="assets/img/intro-title.png" />
+            <img class="hexagon js-hexagon" src="assets/img/hexagon.png" />
+        </div>
     </body>
 </html>
