Improved error handling

--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -128,6 +128,10 @@
                 <h1>Drag your file here</h1>
                 <h2>Otherwise, just click</h2>
             </div>
+
+            <div class="error-message js-error-message">
+                <p></p>
+            </div>
         </div>
     </body>
 </html>
