--- a/app/ui/tour.html
+++ b/app/ui/tour.html
@@ -14,7 +14,7 @@
         </script>
         <script type="text/javascript">
             var _mainClass = 'TourPresenter';
-            var _libs = ['jquery', 'jqueryUI'];
+            var _libs = ['jquery'];
         </script>
         <script type="text/javascript" src="js/libs/require.2.1.9.js" data-main="js/boot"></script>
     </head>
