Added version feature ; Prepared repo for first release

--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -28,7 +28,14 @@
         </header>
         
         <div class="body">
-            <img class="intro-strap js-intro-strap" src="assets/img/intro-title.png" />
+            <div class="strap-wrapper js-strap-wrapper">
+                <img class="intro-strap" src="assets/img/intro-title.png" />
+                <div class="update-notification js-update-notification">
+                  <img class="gift" src="assets/img/gift-icon.png" />
+                    <h1>A new version is available</h1>  
+                </div>                
+            </div>
+            
             <img class="hexagon js-hexagon" src="assets/img/hexagon.png" />
         </div>
     </body>
