09/18 Shelving ; Resuming refactoring

--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -22,12 +22,12 @@
     <body>
         <header class="header">
             <ul>
-                <li><img src="assets/img/exit.png" class="js-exit-trigger" /></li>
-                <li><img src="assets/img/minus.png" class="js-minimize-trigger" /></li>
+                <li class="exit-trigger js-exit-trigger"></li>
+                <li class="minimize-trigger js-minimize-trigger"></li>
             </ul>
         </header>
         
-        <div class="body">
+        <div class="body js-body">
             <div class="strap-wrapper js-strap-wrapper">
                 <img class="intro-strap" src="assets/img/intro-title.png" />
                 <div class="update-notification js-update-notification">
